circular loader done

--- a/circular-loader/index.html
+++ b/circular-loader/index.html
@@ -43,6 +43,8 @@
                         return;
                     }
                     progress.style.background = `conic-gradient(${color} ${degree}%, #222 0%)`;
+                    number.innerHTML = degree + '<span>%</span>';
+                    number.style.color = color;
                 },50)
             })
         })
